--- a/source/Locale/sk/LC_MESSAGES/default.po
+++ b/source/Locale/sk/LC_MESSAGES/default.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2011-09-20 18:02\n"
-"PO-Revision-Date: 2011-09-20 18:02\n"
+"POT-Creation-Date: 2011-10-18 18:11\n"
+"PO-Revision-Date: 2011-10-18 18:11\n"
 "Last-Translator: Vladimír Kubala <kubala.v@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -579,8 +579,13 @@ msgid "&Live stream mode (much slower, but more "
 "stable)"
 msgstr "&Mód živého vysielania (pomalšie, ale stabilnejšie)"
 
+#. FrameDownloaderOptionsPage_Nova..PanelSpecificOptions..LabelSecretPassword..Caption
+#: GUI/VCL/Downloaders/guiOptionsVCL_Nova.dfm:10
+msgid "Secret &password:"
+msgstr "Tajné &heslo:"
+
 #. FrameDownloaderOptionsPage_Nova..PanelSpecificOptions..CheckLowQuality..Caption
-#: GUI/VCL/Downloaders/guiOptionsVCL_Nova.dfm:11
+#: GUI/VCL/Downloaders/guiOptionsVCL_Nova.dfm:19
 msgid "Download in &low quality"
 msgstr "Stiahnuť v &nižšej kvalite"
 
@@ -1204,10 +1209,18 @@ msgstr "Súbor bol zo servera vymazaný."
 msgid "Server returned an error: %s"
 msgstr "Server hlási chybu: %s"
 
+#. Programmer's name for it: ERR_SECURE_TOKEN_NOT_SET
+#: Common/uMessages.pas:95
+#. Programmer's name for it: ERR_SECURE_TOKEN_NOT_SET
+#: Common/uMessages.pas:95
+msgid "Invalid configuration: Secure token not "
+"set."
+msgstr "Nesprávna konfigurácia: Nie je zadaný SecureToken."
+
 #. Programmer's name for it: ERR_FAILED_TO_LOAD_DLL
-#: Common/uMessages.pas:96
+#: Common/uMessages.pas:97
 #. Programmer's name for it: ERR_FAILED_TO_LOAD_DLL
-#: Common/uMessages.pas:96
+#: Common/uMessages.pas:97
 msgid "Failed to load library \"%s\" or its prerequisites."
 msgstr "Zlyhalo načítanie knižnice \"%s\" alebo jej závislosti."
 
