--- a/source/Locale/cs/LC_MESSAGES/default.po
+++ b/source/Locale/cs/LC_MESSAGES/default.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: YouTube Downloader 0.62\n"
-"POT-Creation-Date: 2012-04-06 07:16\n"
-"PO-Revision-Date: 2012-04-06 07:17+0100\n"
+"POT-Creation-Date: 2012-06-03 12:42\n"
+"PO-Revision-Date: 2012-06-03 12:44+0100\n"
 "Last-Translator: Pepak <pepak@pepak.net>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -561,6 +561,11 @@ msgstr "Na&instalovat"
 msgid "&Run from current location without installing"
 msgstr "Sp&ustit z aktuálního umístění bez instalace"
 
+#. FrameDownloaderOptionsPage_Barrandov..PanelSpecificOptions..CheckAvoidHD..Caption
+#: GUI/VCL/Downloaders/guiOptionsVCL_Barrandov.dfm:9
+msgid "&Avoid HD content"
+msgstr "Nepokoušet se hledat &HD videa"
+
 #. FrameDownloaderOptionsPageCommon..PanelCommonOptions..LabelSecureToken..Caption
 #: GUI/VCL/Downloaders/guiOptionsVCL_CommonDownloader.dfm:15
 msgid "Secure &Token:"
@@ -585,6 +590,11 @@ msgstr "&Konvertovat titulky do formátu .SRT"
 #: GUI/VCL/Downloaders/guiOptionsVCL_CommonDownloader.dfm:57
 msgid "&Live stream mode (much slower, but more stable)"
 msgstr "&Režim živého stahování (mnohem pomalejší, ale stabilnější)"
+
+#. FrameDownloaderOptionsPage_CT..PanelSpecificOptions..LabelMaximumVideoBitrate..Caption
+#: GUI/VCL/Downloaders/guiOptionsVCL_CT.dfm:8
+msgid "Maximum video &bitrate:"
+msgstr "Maximální &bitrate videa:"
 
 #. FrameDownloaderOptionsPage_Nova..PanelSpecificOptions..LabelSecretPassword..Caption
 #: GUI/VCL/Downloaders/guiOptionsVCL_Nova.dfm:10
