--- a/source/Locale/cs/LC_MESSAGES/default.po
+++ b/source/Locale/cs/LC_MESSAGES/default.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YTD 1.15\n"
 "POT-Creation-Date: 2012-08-19 15:51\n"
-"PO-Revision-Date: 2012-08-19 15:53+0100\n"
-"Last-Translator: Pepak <pepak@pepak.net>\n"
+"PO-Revision-Date: 2012-09-23 18:35+0100\n"
+"Last-Translator: Pepak <http://www.pepak.net>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
