--- a/source/Locale/cs/LC_MESSAGES/default.po
+++ b/source/Locale/cs/LC_MESSAGES/default.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: YTD 1.15\n"
-"POT-Creation-Date: 2013-02-10 15:41\n"
-"PO-Revision-Date: 2013-02-10 15:43+0100\n"
+"POT-Creation-Date: 2013-04-07 18:25\n"
+"PO-Revision-Date: 2013-04-07 18:27+0100\n"
 "Last-Translator: Pepak <http://www.pepak.net>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
@@ -573,6 +573,11 @@ msgstr "Maximální &bitrate videa:"
 #: GUI/VCL/Downloaders/guiOptionsVCL_EuroSeptik.dfm:8
 msgid "Subtitle &header text:"
 msgstr "Záhlaví textu titulků:"
+
+#. FrameDownloaderOptionsPage_Joj..PanelSpecificOptions..LabelServer..Caption
+#: GUI/VCL/Downloaders/guiOptionsVCL_Joj.dfm:8
+msgid "Ser&ver:"
+msgstr "Ser&ver:"
 
 #. FrameDownloaderOptionsPage_Nova..PanelSpecificOptions..LabelSecretPassword..Caption
 #: GUI/VCL/Downloaders/guiOptionsVCL_Nova.dfm:27
@@ -1220,6 +1225,16 @@ msgstr "Přihlášení se nezdařilo."
 msgid "Failed to load library \"%s\" or its prerequisites."
 msgstr "Nepodařilo se načíst knihovnu \"%s\" nebo její závislosti."
 
+#. Programmer's name for it: MSG_CANT_OVERWRITE_FILE
+#: Common/uOptions.pas:277
+msgid "Cannot overwrite file \"%s\"."
+msgstr "Nepodařilo se přepsat soubor \"%s\"."
+
+#. Programmer's name for it: MSG_CANT_CREATE_FILE
+#: Common/uOptions.pas:278
+msgid "Cannot create file \"%s\"."
+msgstr "Nepodařilo se vytvořit soubor \"%s\"."
+
 #. Programmer's name for it: EUROSEPTIK_SUBTITLES_LANGUAGE
 #: Downloaders/downEuroseptik.pas:107
 msgid "Přepis, angličtina"
@@ -1532,12 +1547,12 @@ msgid "checking..."
 msgstr "zjišťuji..."
 
 #. Programmer's name for it: re7zListStart
-#: Lib/Pepak/uSystem.pas:564
+#: Lib/Pepak/uSystem.pas:566
 msgid "^-{10}[- ]+$"
 msgstr "^-{10}[- ]+$"
 
 #. Programmer's name for it: re7zListItem
-#: Lib/Pepak/uSystem.pas:565
+#: Lib/Pepak/uSystem.pas:567
 msgid ""
 "^([0-9]{4})-([0-9]{2})-([0-9]{2}) ([0-9]{2}):([0-9]{2}):([0-9]{2}) ([.DSHRA]"
 "{5}) +([0-9]+) +([0-9]+ +)?(.+)$"
